# arc-protocol

./: .gitignore  Makefile  README.md  library.json
docs/: message_codegen.md
examples/: gen_vectors.c
python/: pyproject.toml
python/arc_protocol/: __init__.py  messages.py  messages_generated.py  protocol.py  reliable.py  router.py
python/tests/: test_messages.py  test_messages_generated.py  test_protocol.py  test_reliable.py  test_router.py  test_vectors_conformance.py
schema/: messages.json
src/: arc_messages_fc_coord.c  arc_messages_fc_coord.h  arc_messages_fc_video.c  arc_messages_fc_video.h  arc_messages_netmgmt.c  arc_messages_netmgmt.h  arc_messages_power.c  arc_messages_power.h  arc_messages_radio.c  arc_messages_radio.h  arc_messages_video.c  arc_messages_video.h  arc_protocol.c  arc_protocol.h  arc_reliable.c  arc_reliable.h  arc_router.c  arc_router.h
test/: test_arc_messages.c  test_arc_protocol.c  test_arc_reliable.c  test_arc_router.c
tools/: generate_messages.py
vectors/: test_vectors.txt
